# geonovum_workshop

./: .gitignore  README.md  conda_env.yml  env.yml  install.sh  pyproject.toml  workshop_proefening_1.ipynb  workshop_proefening_2.ipynb
